@@ -93,7 +93,9 @@ PenaltyExcessCharacter: 1000000
 PenaltyReturnTypeOnItsOwnLine: 300
 PointerAlignment: Left
 RawStringFormats:
-  - Delimiter:       pb
+  - Language: Cpp
+    Delimiters:
+      - 'pb'
     Language:        TextProto
     BasedOnStyle:    google
 ReflowComments:  true
