@@ -92,11 +92,8 @@ if (FUTOIN_WITH_TESTS)
     #---
     add_custom_target(
         clangtidy-${PROJECT_NAME} ALL
-        COMMAND /usr/bin/clang-tidy-6.0
-        -checks=bugprone-*,cert-*,clang-analyzer-*,clang-analyzer-*,llvm-*,misc-*,modernize-*,performance-*,readability-*
-        -warnings-as-errors=*
+        COMMAND /usr/bin/clang-tidy-10
         -quiet
-        -format-style=file
         -header-filter=${CMAKE_CURRENT_LIST_DIR}/include
         `echo
         $<JOIN:$<TARGET_PROPERTY:${PROJECT_NAME},SOURCES>,\ >
@@ -108,11 +105,8 @@ if (FUTOIN_WITH_TESTS)
 
     add_custom_target(
         clangtidy-${PROJECT_NAME}-test ALL
-        COMMAND /usr/bin/clang-tidy-6.0
-        -checks=bugprone-*,cert-*,clang-analyzer-*,clang-analyzer-*,llvm-*,misc-*,modernize-*,performance-*,readability-*
-        -warnings-as-errors=*
+        COMMAND /usr/bin/clang-tidy-10
         -quiet
-        -format-style=file
         -header-filter=${CMAKE_CURRENT_LIST_DIR}/include
         `echo
         $<JOIN:$<TARGET_PROPERTY:${PROJECT_TEST_NAME},SOURCES>,\ >
@@ -124,7 +118,7 @@ if (FUTOIN_WITH_TESTS)
 
     add_custom_target(
         clangformat-${PROJECT_NAME} ALL
-        COMMAND /usr/bin/clang-format-6.0
+        COMMAND /usr/bin/clang-format-10
         -style=file
         -i
         `echo
