@@ -88,8 +88,7 @@ namespace futoin {
             {
             public:
                 LoopBreak(LoopLabel label) :
-                    Error(errors::LoopBreak),
-                    label_(label)
+                    Error(errors::LoopBreak), label_(label)
                 {}
 
                 inline LoopLabel label()
@@ -106,8 +105,7 @@ namespace futoin {
             {
             public:
                 LoopContinue(LoopLabel label) :
-                    Error(errors::LoopCont),
-                    label_(label)
+                    Error(errors::LoopCont), label_(label)
                 {}
 
                 inline LoopLabel label()
