@@ -1,0 +1,5 @@
+---
+Checks:          'clang-diagnostic-*,clang-analyzer-*,bugprone-*,cert-*,clang-analyzer-*,clang-analyzer-*,llvm-*,misc-*,modernize-*,performance-*,readability-*,-modernize-use-trailing-return-type,-misc-non-private-member-variables-in-classes,-readability-named-parameter,-readability-magic-numbers,-readability-qualified-auto,-llvm-qualified-auto'
+WarningsAsErrors: '*'
+FormatStyle:     file
+InheritParentConfig: true
